--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -210,6 +210,8 @@ dependencies {
     implementation "com.google.crypto.tink:apps-webpush:1.9.1"
     implementation 'com.github.lovegaoshi:KotlinAudio:v2.0.0-aa22'
     
+    implementation 'org.jetbrains:annotations:16.0.2'
+
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
